{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 32,
  "lineage": "9cdb093b-02c7-156d-4286-aa5c1e40ecc3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:loadbalancer/app/vpc1-alb-perucheck-prod/d6bd671740b6b9ca",
            "arn_suffix": "app/vpc1-alb-perucheck-prod/d6bd671740b6b9ca",
            "dns_name": "vpc1-alb-perucheck-prod-91530780.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:543745842878:loadbalancer/app/vpc1-alb-perucheck-prod/d6bd671740b6b9ca",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vpc1-alb-perucheck-prod",
            "security_groups": [
              "sg-017b2be78597c1b17"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00679ca9378e9afd0"
              },
              {
                "subnet_id": "subnet-0b15545a362ebebef"
              }
            ],
            "subnets": [
              "subnet-00679ca9378e9afd0",
              "subnet-0b15545a362ebebef"
            ],
            "vpc_id": "vpc-0b86cf9c2fca819e7",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.sg-alb-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:listener/app/vpc1-alb-perucheck-prod/d6bd671740b6b9ca/6a34567dc24e6989",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/vpc1-tg-perucheck-prod/a44b8446ffad06e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:543745842878:listener/app/vpc1-alb-perucheck-prod/d6bd671740b6b9ca/6a34567dc24e6989",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:loadbalancer/app/vpc1-alb-perucheck-prod/d6bd671740b6b9ca",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb-project",
            "aws_alb_target_group.tg-project",
            "aws_security_group.sg-alb-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:listener/app/vpc1-alb-perucheck-prod/d6bd671740b6b9ca/3cf958546b03503c",
            "certificate_arn": "arn:aws:acm:us-west-1:543745842878:certificate/375fe6d5-fbdd-4293-b75d-28ebd1c52f3f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/vpc1-tg-perucheck-prod/a44b8446ffad06e6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:543745842878:listener/app/vpc1-alb-perucheck-prod/d6bd671740b6b9ca/3cf958546b03503c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:loadbalancer/app/vpc1-alb-perucheck-prod/d6bd671740b6b9ca",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.alb-project",
            "aws_alb_target_group.tg-project",
            "aws_security_group.sg-alb-project"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/vpc1-tg-perucheck-prod/a44b8446ffad06e6",
            "arn_suffix": "targetgroup/vpc1-tg-perucheck-prod/a44b8446ffad06e6",
            "deregistration_delay": 150,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/backend-status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/vpc1-tg-perucheck-prod/a44b8446ffad06e6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "vpc1-tg-perucheck-prod",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-alb-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:security-group/sg-017b2be78597c1b17",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017b2be78597c1b17",
            "ingress": [
              {
                "cidr_blocks": [
                  "190.236.198.58/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "190.236.198.58/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc1-alb-perucheck-prod-sg",
            "name_prefix": "",
            "owner_id": "543745842878",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-project",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:security-group/sg-0f9df65c78d88f171",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9df65c78d88f171",
            "ingress": [
              {
                "cidr_blocks": [
                  "190.236.198.58/32"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "190.236.198.58/32"
                ],
                "description": null,
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "190.236.198.58/32"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "190.236.198.58/32"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "alb-perucheck-prod-sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017b2be78597c1b17"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vp1-perucheck-prod-web-sg",
            "name_prefix": "",
            "owner_id": "543745842878",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-alb-project"
          ]
        }
      ]
    }
  ]
}